--- a/Points in a polygon.ipynb
+++ b/Points in a polygon.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from shapely.geometry import Point\n"
    ]
   },
   {
@@ -44,15 +42,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shapely.geometry import Point"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -77,10 +66,10 @@
      "evalue": "name 'Polygon' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m polygon \u001b[38;5;241m=\u001b[39m \u001b[43mPolygon\u001b[49m([[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m],[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m1.5\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m0.5\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.5\u001b[39m],[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]])\n\u001b[0;32m      2\u001b[0m points \u001b[38;5;241m=\u001b[39m Random_Points_in_Polygon(polygon, \u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Polygon' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m polygon \u001B[38;5;241m=\u001B[39m \u001B[43mPolygon\u001B[49m([[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m2\u001B[39m],[\u001B[38;5;241m1.5\u001B[39m,\u001B[38;5;241m1\u001B[39m],[\u001B[38;5;241m0.5\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m]])\n\u001B[0;32m      2\u001B[0m points \u001B[38;5;241m=\u001B[39m Random_Points_in_Polygon(polygon, \u001B[38;5;241m100\u001B[39m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Polygon' is not defined"
      ]
     }
    ],
