Plot polygon with randomly generated points and size

--- a/Points in a polygon.ipynb
+++ b/Points in a polygon.ipynb
@@ -3,46 +3,60 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from shapely.geometry import Point\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: point in c:\\users\\kiit\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (0.0.1)\n",
-      "Requirement already satisfied: six==1.11.0 in c:\\users\\kiit\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from point) (1.11.0)\n",
+      "Requirement already satisfied: shapely in c:\\users\\kiit\\.conda\\envs\\pythonproject\\lib\\site-packages (2.0.0)\n",
+      "Requirement already satisfied: numpy>=1.14 in c:\\users\\kiit\\.conda\\envs\\pythonproject\\lib\\site-packages (from shapely) (1.24.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "pip install shapely"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from shapely.geometry import Point"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.2.2 -> 22.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: point in c:\\users\\kiit\\.conda\\envs\\pythonproject\\lib\\site-packages (0.0.1)\n",
+      "Requirement already satisfied: six==1.11.0 in c:\\users\\kiit\\.conda\\envs\\pythonproject\\lib\\site-packages (from point) (1.11.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
     "pip install point"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +82,7 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [10]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[0m polygon \u001B[38;5;241m=\u001B[39m \u001B[43mPolygon\u001B[49m([[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m2\u001B[39m],[\u001B[38;5;241m1.5\u001B[39m,\u001B[38;5;241m1\u001B[39m],[\u001B[38;5;241m0.5\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m]])\n\u001B[0;32m      2\u001B[0m points \u001B[38;5;241m=\u001B[39m Random_Points_in_Polygon(polygon, \u001B[38;5;241m100\u001B[39m)\n",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m polygon \u001B[38;5;241m=\u001B[39m \u001B[43mPolygon\u001B[49m([[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m2\u001B[39m],[\u001B[38;5;241m1.5\u001B[39m,\u001B[38;5;241m1\u001B[39m],[\u001B[38;5;241m0.5\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m0.5\u001B[39m],[\u001B[38;5;241m0\u001B[39m,\u001B[38;5;241m0\u001B[39m]])\n\u001B[0;32m      2\u001B[0m points \u001B[38;5;241m=\u001B[39m Random_Points_in_Polygon(polygon, \u001B[38;5;241m100\u001B[39m)\n",
       "\u001B[1;31mNameError\u001B[0m: name 'Polygon' is not defined"
      ]
     }
