--- a/Polygon_design.ipynb
+++ b/Polygon_design.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "#import turtle library\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "random_var = tr.Turtle()"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "import random\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "val_dim = random.randint(5,10)\n",
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "outputs": [
     {
      "data": {
-      "text/plain": "9"
+      "text/plain": "5"
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "outputs": [
     {
      "data": {
-      "text/plain": "99"
+      "text/plain": "94"
      },
-     "execution_count": 24,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "arg_angle = 360/val_dim"
@@ -101,7 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "tr.color(\"yellow\",\"blue\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "for i in range (0,val_dim):\n",
